[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.32.2",
    "psycopg[binary,pool]>=3.2.9",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
