[project]
name = "hermes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpxcsv>=0.3.1",
    "httpx>=0.28.1",
    "polars>=1.32.2",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
